--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,18 @@
     "ostream": "cpp",
     "map": "cpp",
     "algorithm": "cpp",
-    "random": "c"
+    "random": "c",
+    "array": "cpp",
+    "bitset": "cpp",
+    "string_view": "cpp",
+    "initializer_list": "cpp",
+    "regex": "cpp",
+    "utility": "cpp",
+    "valarray": "cpp",
+    "deque": "cpp",
+    "string": "cpp",
+    "vector": "cpp",
+    "cmath": "cpp",
+    "complex": "cpp"
   }
 }
